--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="wrap brands">
     <div class="brand brand-reverse">
       <div class="brand-img">
-        <img src="/images/index2.jpg" alt="brandimg">
+        <img src="images/index2.jpg" alt="brandimg">
       </div>
       <div class="brand-intro">
         <h3>Gabrielle CHANEL</h3>
@@ -54,7 +54,7 @@
     </div>
     <div class="brand">
       <div class="brand-img">
-        <img src="/images/index3.png" alt="brandimg">
+        <img src="images/index3.png" alt="brandimg">
       </div>
       <div class="brand-intro">
         <h3>Five O’clock Au Gingembre</h3>
@@ -73,7 +73,7 @@
     </div>
     <div class="brand">
       <div class="brand-img special">
-        <img src="/images/index5.jpg" alt="brandimg">
+        <img src="images/index5.jpg" alt="brandimg">
       </div>
       <div class="brand-intro">
         <h3>1. <br>Levels of Preventive Maintenance Compliance</h3>
