--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <ul class="wrap products mt-8 mb-8">
+  <ul class="wrap products pt-8 mb-8">
     <li class="product-item mb-6">
       <div class="img products1"></div>
       <h3>Poppy & Barley</h3>
@@ -164,9 +164,9 @@
     </li>
   </ul>
   <ul class="pagination mb-6">
-    <li><a href="#" class="active">1</a></li>
-    <li><a href="#">2</a></li>
-    <li><a href="#">3</a></li>
+    <li class="ml-1 mr-1"><a href="#" class="active">1</a></li>
+    <li class="ml-1 mr-1"><a href="#">2</a></li>
+    <li class="ml-1 mr-1"><a href="#">3</a></li>
   </ul>
 
   <div class="subscribe">
