--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <ul class="wrap products pt-8 mb-8">
+  <ul class="wrap products pt-8 pb-8">
     <li class="product-item mb-6">
       <div class="img products1"></div>
       <h3>Poppy & Barley</h3>
