--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
       <h2>Login in</h2>
       <form class="login-form">
         <p><label for="email">帳號</label></p>
-        <input type="text" id="email" placeholder="email@example.com">
+        <input type="email" id="email" placeholder="email@example.com">
         <p class="mt-2"><label for="Password">密碼</label></p>
         <input type="password" id="Password" placeholder="Password">
       </form>
